src/css/style.css
/* ... */
#page-builder-editor ol,
#page-builder-editor-editable-area ol,
#page-builder-editor ul,
#page-builder-editor-editable-area ul {
  list-style: disc !important;
  padding: 0 0 0 1rem;
}

#page-builder-editor li,
#page-builder-editor-editable-area li {
  line-height: 1.2;
  margin-left: 1em; /* Adjust this value as needed */
}

#pbxEditToolbar {
  opacity: 0;
  pointer-events: none;
  transform: translateY(0.1rem) scale(0.1);
  transition:
    left 0.3s cubic-bezier(0.4, 0, 0.2, 1),
    top 0.3s cubic-bezier(0.4, 0, 0.2, 1),
    opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1),
    transform 0.3s cubic-bezier(0.4, 0, 0.2, 1),
    min-width 0.3s cubic-bezier(0.4, 0, 0.2, 1),
    width 0.3s cubic-bezier(0.4, 0, 0.2, 1),
    height 0.3s cubic-bezier(0.4, 0, 0.2, 1),
    border-radius 0.3s cubic-bezier(0.4, 0, 0.2, 1);
}

#pbxEditToolbar.is-visible {
  opacity: 1;
  pointer-events: auto;
  transform: translateY(0) scale(1);
  min-width: 4rem;
  padding-right: 1rem;
  padding-left: 1rem;
  height: 2.2rem;
}

/* CSS for content inside page builder # start */
#pagebuilder {
  position: relative;
  overflow-y: auto;
}
#pagebuilder a {
  pointer-events: none;
}

#pagebuilder #youtube-video::before {
  content: 'Select Video Element';
  font-family: 'Jost';
  background: #16a34a !important;
  color: white;
  text-decoration: none;
  margin-right: 8px;
  vertical-align: middle;
  min-height: 3rem;
  padding: 0.75rem 0.75rem;
  white-space: nowrap;
  word-break: keep-all;
  font-weight: 500;
  display: inline-flex;
  gap: 0.25rem;
  align-items: center;
  justify-content: center;
  border-radius: 9999px;
  border: 1px solid transparent;
  margin-bottom: 20px;
  font-size: 0.8rem !important;
}

@media (min-width: 640px) {
  #pagebuilder #youtube-video::before {
    font-size: 0.9rem !important;
    width: auto;
  }
}

#pagebuilder #youtube-video:hover::before {
  text-decoration: none;
  cursor: pointer;
}

#page-builder-editor a,
#pagebuilder a {
  text-decoration: underline;
}

#page-builder-editor #linktree p,
#pagebuilder #linktree p {
  width: 100%;
}

#page-builder-editor #linktree a,
#pagebuilder #linktree a {
  @apply pbx-py-4 pbx-px-2 pbx-block pbx-w-full;
}

#page-builder-editor #linktree a,
#pagebuilder #linktree a {
  text-decoration: none;
  font-weight: 500;
  color: inherit !important;
  width: 100%;
  cursor: pointer;
}
#page-builder-editor strong,
#pagebuilder strong {
  font-weight: 500;
}

#page-builder-editor ol,
#pagebuilder ol,
#page-builder-editor ul,
#pagebuilder ul {
  list-style: disc !important;
  padding: 0rem;
}

